--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <div class="video">
-        <video class="video-player smallframe" id="user1" autoplay playsinline></video>
+        <video class="video-player" id="user1" autoplay playsinline></video>
         <video class="video-player" id="user2" autoplay playsinline></video>
     </div>
 
