--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div class="video">
         <video class="video-player" id="user1" muted="muted" autoplay playsinline></video>
-        <video class="video-player" id="user2" autoplay playsinline></video>
+        <video class="video-player" id="user2" muted="muted" autoplay playsinline></video>
     </div>
 
     <div class="controls">
