--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     
     <div class="video">
-        <video class="video-player" id="user1" muted="muted" autoplay playsinline></video>
-        <video class="video-player" id="user2" muted="muted" autoplay playsinline></video>
+        <video class="video-player" id="user1"  autoplay=false playsinline></video>
+        <video class="video-player" id="user2"  autoplay playsinline></video>
     </div>
 
     <div class="controls">
